kubernetes/deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipes-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - recipes.jamiebuckley.dev
      secretName:  recipes-app-certificate
  rules:
    - host: recipes.jamiebuckley.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipes-app
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: recipes-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: recipes-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes-app
  template:
    metadata:
      labels:
        app: recipes-app
    spec:
      containers:
        - name: recipes-app
          image: registry.jamiebuckley.dev/recipes-app:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
